<resources>
    <!-- 앱 정보 -->
    <string name="app_name">PingTalk</string>
    <string name="app_subtitle">가족과 함께하는 프라이빗 채팅</string>

    <!-- 입력창 -->
    <string name="hint_nickname">닉네임을 입력하세요</string>
    <string name="hint_family_code">가족코드를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>
    <string name="hint_message">메시지를 입력하세요</string>

    <!-- 버튼 -->
    <string name="btn_create">방 만들기</string>
    <string name="btn_join">입장하기</string>
    <string name="btn_send">전송</string>
    <string name="back">뒤로가기</string>

    <!-- 상단 타이틀 -->
    <string name="room_name">우리 가족</string>
    <string name="room_code">FAMILY123</string>
    <string name="text_sender">보낸사람</string>
    <string name="message_hint">메시지 내용</string>
    <string name="sample_time">오후 6:30</string>
    <string name="sample_my_msg">보낸 메시지</string>
    <string name="sample_other_sender">아빠</string>
    <string name="sample_other_msg">받은 메시지</string>
    <string name="sample_date">2025년 4월 9일</string>

    <!-- 채팅방 목록용 추가 -->
    <string name="title_chatroom_list">채팅방 목록</string>
    <string name="label_room_code">방 코드</string>
    <string name="label_created_by">개설자</string>
    <string name="btn_enter_room">입장</string>
    <string name="no_rooms_found">등록된 채팅방이 없습니다</string>
</resources>
